import {
    IRegistroPedido,
    IRegistarRequest,
    IRegistarResponse,
    IIniciarPreparoRequest,
    IIniciarPreparoResponse,
    ITerminarPreparoRequest,
    ITerminarPreparoResponse,
    IFinalizarRequest,
    IFinalizarResponse,
    IListarRequest,
    IListarResponse,
    IAtualizarPagamentoRequest,
    IAtualizarPagamentoResponse
} from "../../../../../../protobuf/gen/pedido/service/pedido";

export {
    IRegistroPedido,
    IRegistarRequest,
    IRegistarResponse,
    IIniciarPreparoRequest,
    IIniciarPreparoResponse,
    ITerminarPreparoRequest,
    ITerminarPreparoResponse,
    IFinalizarRequest,
    IFinalizarResponse,
    IListarRequest,
    IListarResponse,
    IAtualizarPagamentoRequest,
    IAtualizarPagamentoResponse
};